--- a/countdown-timer/style.css
+++ b/countdown-timer/style.css
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap');
-
-*{
-    box-sizing: border-box;
+html {
+    background-color: #333232;
+    height: 100%;
 }
 
-body{
+h1 {
+    color: rgb(87, 83, 83);
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
+    text-align: center;
+}
+body {
     background-image: url('./snow.jpg');
     min-height: 100vh;
     background-size: cover;
@@ -16,31 +20,91 @@ body{
     align-items: center;
 }
 
-h1{
-    font-weight: normal;
-    font-size: 4rem;
-    margin-top: 5rem;
-    text-align: center;
+#container {
+    height: 200px;
+    width: 700px;
+    margin: 0 auto; 
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
 }
 
-.countdown-container{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+/*label*/
+.label {
+    margin: 0;
+
+    justify-self: center;
+    align-self: center;
+    font-size: 30px;
 }
 
-.big-text{
-    font-weight: bold;
-    font-size: 6rem;
-    line-height: 1;
-    margin: 1rem 2rem;
+#hour-label {
+    grid-area: 1 / 2 / 1 / 3;
 }
 
-.countdown-el{
-    text-align: center;
+#min-label {
+    grid-area: 1 / 3 / 1 / 4;
 }
 
-.countdown-el span{
-    font-size: 1.5rem;
+#sec-label {
+    grid-area: 1 / 4 / 1 / 5;
+}
+
+/*times*/
+.time {
+    justify-self: center;
+    align-self: center;
+
+    border: none;
+    background-color: #ffffff00;
+    font-size: 50px;
+    width: 70px;
+    height: 50px;
+}
+
+#hour {
+    grid-area: 2 / 2 / 2 / 3;
+}
+
+.semicolon {
+    justify-self: center;
+    align-self: center;
+
+    font-size: 30px;
+    margin: 0;
+}
+#p1 {
+    grid-area: 2 / 2 / 2 / 4;
+}
+
+#minute {
+    grid-area: 2 / 3 / 2 / 4;
+}
+
+#p2 {
+    grid-area: 2 / 3 / 2 / 5;
+}
+
+#sec {
+    grid-area: 2 / 4 / 2 / 5;
+}
+
+/*buttons*/
+
+.btn {
+    align-self: center;
+    
+    width: 100px;
+    height: 40px;
+
+    font-size: 30px;
+    justify-self: center;
+}
+
+#start {
+    grid-area: 3 / 2 / 3 / 4;
+}
+
+#reset {
+    grid-area: 3 / 3 / 3 / 5;
 }
