--- a/Alarm Clock in JavaScript/style.css
+++ b/Alarm Clock in JavaScript/style.css
@@ -1,55 +1,57 @@
 /* Import Google font - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-body, .wrapper, .content{
+body,
+.wrapper,
+.content {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-body{
+body {
   padding: 0 10px;
   min-height: 100vh;
   background: #c07d19;
 }
-.wrapper{
+.wrapper {
   width: 440px;
   padding: 30px 30px 38px;
   background: #fff;
   border-radius: 10px;
   flex-direction: column;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
 }
-.wrapper img{
+.wrapper img {
   max-width: 103px;
 }
-.wrapper h1{
+.wrapper h1 {
   font-size: 38px;
   font-weight: 500;
   margin: 30px 0;
 }
-.wrapper .content{
+.wrapper .content {
   width: 100%;
   justify-content: space-between;
 }
-.content.disable{
+.content.disable {
   cursor: no-drop;
 }
-.content .column{
+.content .column {
   padding: 0 10px;
   border-radius: 5px;
   border: 1px solid #bfbfbf;
   width: calc(100% / 3 - 5px);
 }
-.content.disable .column{
+.content.disable .column {
   opacity: 0.6;
   pointer-events: none;
 }
-.column select{
+.column select {
   width: 100%;
   height: 53px;
   border: none;
@@ -57,7 +59,7 @@ body{
   background: none;
   font-size: 19px;
 }
-.wrapper button{
+.wrapper button {
   width: 100%;
   border: none;
   outline: none;
@@ -67,5 +69,9 @@ body{
   padding: 17px 0;
   margin-top: 20px;
   border-radius: 5px;
-  background: #4A98F7;
+  background: #4a98f7;
+}
+.set_alarm_btn:hover {
+  transition-duration: 1s;
+  transform: translateY(-5px);
 }
